@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_view_advanced_page.php,v 1.57 2004-07-18 10:46:01 vboctor Exp $
+	# $Id: bug_view_advanced_page.php,v 1.58 2004-07-25 21:09:39 thraxisp Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -286,25 +286,50 @@
 		<?php echo get_enum_element( 'eta', $t_bug->eta ) ?>
 	</td>
 
-	<!-- spacer -->
+	<!-- fixed in version -->
 	<td class="category">
-		<?php echo lang_get( 'fixed_in_version' ); ?>
+		<?php 
+			$t_show_version = ( ON == config_get( 'show_product_version' ) ) 
+					|| ( ( AUTO == config_get( 'show_product_version' ) ) 
+								&& ( count( version_get_all_rows( $t_bug->project_id ) ) > 0 ) );
+			if ( $t_show_version ) { 
+				echo lang_get( 'fixed_in_version' );
+			}
+		?>
 	</td>
 	<td>
-		<?php echo $t_bug->fixed_in_version ?>
+		<?php 
+			if ( $t_show_version ) { 
+				echo $t_bug->fixed_in_version; 
+			}
+		?>
 	</td>
 
-	<!-- Product Version -->
+	<!-- Product Version or Product Build, if version is suppressed -->
 	<td class="category">
-		<?php echo lang_get( 'product_version' ) ?>
+		<?php 
+			if ( $t_show_version ) { 
+				echo lang_get( 'product_version' ); 
+			}else{
+				echo lang_get( 'product_build' );
+			}
+		?>
 	</td>
 	<td>
-		<?php echo $t_bug->version ?>
+		<?php  
+			if ( $t_show_version ) { 
+				echo $t_bug->version; 
+			}else{
+				echo $t_bug->build;
+			}
+		?>
 	</td>
 
 </tr>
 
-
+<?php
+	if( $t_show_version ) {
+?>
 <tr <?php echo helper_alternate_class() ?>>
 
 	<!-- spacer -->
@@ -319,7 +344,9 @@
 	</td>
 
 </tr>
-
+<?php
+	}
+?>
 
 <!-- spacer -->
 <tr height="5" class="spacer">
